hands-on/manifests/old-manifests/service-2.yaml
apiVersion: v1
kind: Service
metadata:
  name: microservice-svc
spec:
  type: ClusterIP
  selector:
    app: microservice
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 8080
