hands-on/manifests/old-manifests/ingress-3.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: images-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: images-svc
          servicePort: 2345
